...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/PostNumberDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/length_input"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/FollowerDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/length_input"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/FollowingDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/length_input"
            android:textAlignment="center" />
    </LinearLayout>
...
            android:layout_weight="1"
            android:text="@string/usernameText"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/viewUsername"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usernameText"
            android:textSize="20sp" />
    </LinearLayout>
...
            android:layout_height="40dp"
            android:text="@string/bioEdit"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ProfileViewBio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bioText" />
    </LinearLayout>

    <LinearLayout
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/EditProfile" />

        <Button
            android:id="@+id/LogoutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/logout" />
    </LinearLayout>

...
