<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.HomeScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="162dp"
            android:text="@string/WelcomeMessage"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="38dp"
            android:text="@string/SignUpButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/logInButton"
            android:layout_width="409dp"
            android:layout_height="68dp"
            android:layout_marginBottom="77dp"
            android:text="@string/LogInButton"
            app:layout_constraintBottom_toTopOf="@+id/newUserMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/newUserMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="134dp"
            android:layout_marginEnd="135dp"
            android:layout_marginBottom="18dp"
            android:text="@string/NewUserMessage"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="278dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/usernameLogIn"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/usernameLogIn"
            android:layout_width="95dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="6dp"
            android:text="@string/usernameText"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/usernameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

        <TextView
            android:id="@+id/passwordLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="14dp"
            android:text="@string/passText"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/passwordField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameLogIn" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="273dp"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="46dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/logInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/passwordLogIn"
            app:layout_constraintTop_toBottomOf="@+id/usernameField"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>